route: boot config: support lockdown and cust serialization
